--- a/flea_market/.env
+++ b/flea_market/.env
@@ -5,3 +5,16 @@ PORT=3000
 
 # Rudy's pgAdmin
 PG_URI=postgres://postgres:chobits@localhost:5432/fleaMarket
+
+postgres
+    password: 'Gr4nd4m',
+    host: 'localhost',
+    port: 5432,
+    database: 'fleaMarket'
+
+
+DB_USER=postgres
+DB_PASSWORD=Gr4nd4m
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=fleaMarket
