--- a/flea_market/package.json
+++ b/flea_market/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.32.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
