--- a/flea_market/.env
+++ b/flea_market/.env
@@ -1,7 +1,7 @@
 PORT=3000
 
 # Hector's pgAdmin
-PG_URI=postgres://postgres:Gr4nd4m@localhost:5432/fleaMarket
+# PG_URI=postgres://postgres:Gr4nd4m@localhost:5432/fleaMarket
 
 # Rudy's pgAdmin
 # PG_URI=postgres://postgres:chobits@localhost:5432/fleaMarket
