--- a/flea_market/package.json
+++ b/flea_market/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.32.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
