--- a/flea_market/.gitignore
+++ b/flea_market/.gitignore
@@ -1,9 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# src dependencies
 /node_modules
 /.pnp
 .pnp.js
+
+# Server dependencies
+/server/node_modules
+/server/.pnp
+/server/.pnp.js
 
 # testing
 /coverage
@@ -17,10 +22,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-.vscode
