--- a/flea_market/package.json
+++ b/flea_market/package.json
@@ -11,7 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.32.1",
